--- a/agenda/menu/menu3.css
+++ b/agenda/menu/menu3.css
@@ -127,10 +127,11 @@ nav ul li a .salir {
 
 body {
  background-color: #FFDEC6;
+ margin: 0px auto;
 }
 #global {
  width:90%; height:800px;
- margin: 0 auto 0 auto;
+ margin: 0 auto ;
  /*background-color: #D8F5FF;*/
 }
 #cabecera {
@@ -152,10 +153,15 @@ body {
 .presentacion{
 border-radius: 25px;
     border: 2px solid #73AD21;
-    padding: 20px; 
-    width: 400px;
-    margin: 0 auto;
+    padding: 10px; 
+    width: 80%;
+    height: auto;
+    margin: 0px auto;
     /*height: 150px; */
+}
+#mostrar_img{
+align-content: center;
+	margin:  0px auto;
 }
 #pie{
  width:800px;
